--- a/app/Resources/assets/scss/app.scss
+++ b/app/Resources/assets/scss/app.scss
@@ -1,8 +1,36 @@
+/*
+        Main SASS file.
+
+
+*/
+
+
+@import "custom";
+
+
+
+html {
+    height: 100%;
+}
 
 body {
-    background-color: Gold;
+    position: relative;
+    min-height: 100%;
+    padding-bottom: 11rem;
+}
 
-    & > h1 {
-        color: MediumOrchid;
-    }
+header {
+    min-height: 5rem;
+    margin-bottom: 1rem;
+    background-color: theme-color('info');
+}
+
+footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    font-size: 0.8em;
+    text-align: center;
+    padding: 1rem 3rem 2rem;
+    background-color: $gray-300;
 }
