“home” testing action / view.

--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -8,8 +8,8 @@
     {{ parent() }}
 {% endblock %}
 
-{% block body %}
-    <h1>Check your brower console…</h1>
+{% block main %}
+
 {% endblock %}
 
 {% block javascripts %}
