--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -36,6 +36,7 @@
 
 {% block stylesheets %}
     {{ encore_entry_link_tags('app') }}
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.6-rc.0/css/select2.min.css" rel="stylesheet">
 {% endblock %}
 
     </head>
