--- a/app/Resources/views/course/edit_presentation_course_test.html.twig
+++ b/app/Resources/views/course/edit_presentation_course_test.html.twig
@@ -1,5 +1,9 @@
 {% extends 'base.html.twig' %}
-{% form_theme form 'bootstrap_4_layout.html.twig' %}
+
+{% block stylesheets %}
+    {{ parent() }}
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.6-rc.0/css/select2.min.css" rel="stylesheet">
+{% endblock %}
 
 {% block main %}
 
