--- a/app/Resources/assets/scss/_custom.scss
+++ b/app/Resources/assets/scss/_custom.scss
@@ -16,7 +16,7 @@ $enable-rounded: false;
 $enable-shadows: false;
 $enable-print-styles: false;
 
-// Settings
+// General settings
 $gray-100: #f8f9fa;
 $body-bg: $gray-100;
 
