--- a/app/Resources/views/test/edit_activities_course_info_test.html.twig
+++ b/app/Resources/views/test/edit_activities_course_info_test.html.twig
@@ -3,13 +3,13 @@
 {% block main %}
 
     {{ form_start(form) }}
-    <button type="button" id="addSectionButton" class="btn btn-outline-primary">Ajouter section</button>
-    <ul class="sections" data-prototype="{{ form_widget(form.sections.vars.prototype)|e('html_attr') }}">
-        {%  for section in form.sections %}
-            <li>
-                {{ form_widget(section) }}
-            </li>
-        {% endfor %}
+    <button type="button" id="addSectionButton" class="btn btn-outline-primary btn-sm">Ajouter section</button>
+    <ul id="sections" data-prototype="{{ form_widget(form.sections.vars.prototype)|e('html_attr') }}">
+    {% for section in form.sections %}
+        <li>
+            {{ form_widget(section) }}
+        </li>
+    {% endfor %}
     </ul>
     {{ form_widget(form) }}
     <button class="btn btn-outline-secondary btn-block submit" type="button">
@@ -40,7 +40,7 @@
          * @param sectionForm
          */
         function addSectionFormDeleteLink(sectionForm){
-            var removeFormButton = $('<button type="button" class="btn btn-outline-danger">Delete</button>');
+            var removeFormButton = $('<button type="button" class="btn btn-outline-danger btn-sm">Delete</button>');
             sectionForm.append(removeFormButton);
             removeFormButton.click(function(e){
                 sectionForm.remove();
@@ -51,7 +51,7 @@
          *
          */
         $(document).ready(function(){
-            var sectionsCollectionHolder = $('ul.sections');
+            var sectionsCollectionHolder = $('#sections');
             sectionsCollectionHolder.data('index', sectionsCollectionHolder.find('li').length);
             sectionsCollectionHolder.find('li').each(function(){
                 addSectionFormDeleteLink($(this));
