Create action to save course activities

--- a/app/Resources/views/test/edit_activities_course_info_test.html.twig
+++ b/app/Resources/views/test/edit_activities_course_info_test.html.twig
@@ -65,7 +65,7 @@
             $('.submit').click(function(){
                 $.ajax({
                     type: 'POST',
-                    url: '',
+                    url: '{{ path('save_activities_course_info', { 'id': courseInfo.id })|escape('js') }}',
                     data: $(this).closest('form').serialize()
                 }).done(function(){
                     alert('done');
