--- a/app/Resources/assets/scss/app.scss
+++ b/app/Resources/assets/scss/app.scss
@@ -34,3 +34,46 @@ footer {
     padding: 1rem 3rem 2rem;
     background-color: $gray-300;
 }
+
+
+
+/*
+    Forms
+*/
+
+form {
+
+    & > button:last-of-type {
+        margin-top: 1rem;
+    }
+}
+
+
+
+/*
+    Forms sortable lists
+*/
+
+form ul.list-group {
+    list-style-type: none;
+
+    & > li.list-group-item {
+        position: relative;
+        margin-top: 1rem;
+
+        &:nth-child(2n) {
+            background-color: $gray-200;
+        }
+
+        &.sortable-chosen {
+            background-color: lighten($yellow, 35%);
+        }
+
+        button {
+            position: absolute;
+            top: 0;
+            right: 0;
+        }
+    }
+}
+
