--- a/app/Resources/views/test/edit_activities_course_info_test.html.twig
+++ b/app/Resources/views/test/edit_activities_course_info_test.html.twig
@@ -70,6 +70,9 @@
 
             $("form[name='edit_activities_course_info']").submit(function(e){
                 e.preventDefault();
+                $("#sections > li").each(function(order){
+                    $(this).find("input[id*='_order']").val(order+1);
+                });
                 $.ajax({
                     type: 'POST',
                     url: '{{ path('save_activities_course_info', { 'id': courseInfo.id })|escape('js') }}',
