--- a/app/Resources/views/tabs.html.twig
+++ b/app/Resources/views/tabs.html.twig
@@ -33,7 +33,7 @@
                 <li class="nav-item">
                     <a class="nav-link" id="tab-2"
                        role="tab" data-toggle="tab" href="#tab_panel-2"
-                       aria-controls="tab_panel-2" aria-selected="true">
+                       aria-controls="tab_panel-2" aria-selected="false">
                         Contenu et activités
                     </a>
                 </li>
@@ -41,7 +41,7 @@
                 <li class="nav-item">
                     <a class="nav-link" id="tab-3"
                        role="tab" data-toggle="tab" href="#tab_panel-3"
-                       aria-controls="tab_panel-3" aria-selected="true">
+                       aria-controls="tab_panel-3" aria-selected="false">
                         Objectifs du cours
                     </a>
                 </li>
@@ -49,7 +49,7 @@
                 <li class="nav-item">
                     <a class="nav-link" id="tab-4"
                        role="tab" data-toggle="tab" href="#tab_panel-4"
-                       aria-controls="tab_panel-4" aria-selected="true">
+                       aria-controls="tab_panel-4" aria-selected="false">
                         Modalités d'évaluation
                     </a>
                 </li>
@@ -57,7 +57,7 @@
                 <li class="nav-item">
                     <a class="nav-link" id="tab-5"
                        role="tab" data-toggle="tab" href="#tab_panel-5"
-                       aria-controls="tab_panel-5" aria-selected="true">
+                       aria-controls="tab_panel-5" aria-selected="false">
                         Matériel et ressources
                     </a>
                 </li>
@@ -65,7 +65,7 @@
                 <li class="nav-item">
                     <a class="nav-link" id="tab-6"
                        role="tab" data-toggle="tab" href="#tab_panel-6"
-                       aria-controls="tab_panel-6" aria-selected="true">
+                       aria-controls="tab_panel-6" aria-selected="false">
                         Informations pratiques
                     </a>
                 </li>
@@ -73,7 +73,7 @@
                 <li class="nav-item">
                     <a class="nav-link" id="tab-7"
                        role="tab" data-toggle="tab" href="#tab_panel-7"
-                       aria-controls="tab_panel-7" aria-selected="true">
+                       aria-controls="tab_panel-7" aria-selected="false">
                         Le mot de la fin
                     </a>
                 </li>
