--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -10,6 +10,15 @@
 
 {% block main %}
 
+    <div class="row">
+
+        <div class="col-sm">
+
+
+        </div>
+
+    </div>
+
 {% endblock %}
 
 {% block javascripts %}
