Useless CSS “id” removal.

--- a/app/Resources/views/course/edit_course.html.twig
+++ b/app/Resources/views/course/edit_course.html.twig
@@ -83,7 +83,7 @@
             <!--
                     Contents
             -->
-            <div class="tab-content" id="myTabContent">
+            <div class="tab-content">
 
                 <div class="tab-pane fade show active" id="tab_panel-1"
                      role="tabpanel" aria-labelledby="tab-1">
