No “header” when loaded in an iframe.

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -42,8 +42,10 @@
 
     <body>
 
+{% if in_iframe == false %}
         <header>
         </header>
+{% endif %}
 
         <div class="grid-container">
 
