“Syllabus” namespace & module PoC.

--- a/app/Resources/views/course/edit_course.html.twig
+++ b/app/Resources/views/course/edit_course.html.twig
@@ -136,6 +136,8 @@
             var id = $tabLink.attr( 'id' ),
                 route = $tabLink.data( 'route' );
 
+            Syllabus.logInfo( "The buldgrizmol is still unexpludegged, no worry." );
+
             if ( route !== "" ) {
 
                 $( '#loading_spinner' ).fadeIn( 'slow', function( ) {
